# rv-emu

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.riscv_gdb  Makefile  README.md  architecture.md  dev_log.md  docker-compose.yaml  fib.dump  fib.hex  fib.s  log_to_database.sh  perfreport.txt  test.c  test.dump  test.s  test_log.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/: exception.dump  exception.elf  exception.hex  exception.s  fib.dump  test.c  test.dump  xv6.dump
apps/xv6/: fs.img  kernel  kernel.asm
slide/: create-RISCV-emulator-with-Rust.md
src/: bus.rs  clint.rs  cpu.rs  csr.rs  csr.s  debugger.rs  dram.rs  emu.rs  instruction.rs  interrupt.rs  logger.rs  main.rs  plic.rs  test.rs  uart.rs  virtio.rs
src/cpu/: execute.rs  mmu.rs  mod.rs
tool/: annotate_execution_log.py
tool/rvlog-viewer/: disasm.txt  package-lock.json  package.json  server.ts  tsconfig.json
tool/rvlog-viewer/public/: app.js  app.ts  index.html
xtask/: Cargo.toml
xtask/src/: main.rs
