[package]
name = "rv-emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
env_logger = {version = "0.11.6"}
gdbstub = {version = "0.7.0"}
gdbstub_arch = {version = "0.3.0"}
log = {version = "0.4.22"}
[profile.release-with-debug]
inherits = "release"
debug = true